security with driver role

--- a/templates/default/noaccess.html.twig
+++ b/templates/default/noaccess.html.twig
@@ -9,5 +9,7 @@
     </style>
 
     <h1>No Access {{ app.user }}</h1>
-    <a href="/">Back</a>
+    <p>
+        <a href="javascript:history.go(-1)" title="Return to the previous page">&laquo; Go back</a>
+    </p>
 {% endblock %}
