--- a/templates/logboek/index.html.twig
+++ b/templates/logboek/index.html.twig
@@ -38,7 +38,11 @@
                 <td>{{ logboek.evenement }}</td>
                 <td>
                     <a href="{{ path('logboek_show', {'id': logboek.id}) }}">show</a>
-                    <a href="{{ path('logboek_edit', {'id': logboek.id}) }}">edit</a>
+
+                    {% if is_granted('ROLE_DRIVER') or is_granted('ROLE_ADMIN')  %}
+                        <a href="{{ path('logboek_edit', {'id': logboek.id}) }}">edit</a>
+                    {% endif %}
+
                 </td>
             </tr>
         {% else %}
@@ -48,6 +52,8 @@
         {% endfor %}
         </tbody>
     </table>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('logboek_new') }}">Create new</a>
+    {% endif %}
 
-    <a href="{{ path('logboek_new') }}">Create new</a>
 {% endblock %}
