--- a/templates/logboek/show.html.twig
+++ b/templates/logboek/show.html.twig
@@ -55,8 +55,10 @@
     </table>
 
     <a href="{{ path('logboek_index') }}">back to list</a>
+    {% if is_granted('ROLE_DRIVER') or is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('logboek_edit', {'id': logboek.id}) }}">edit</a>
+    {% endif %}
 
-    <a href="{{ path('logboek_edit', {'id': logboek.id}) }}">edit</a>
 
     {{ include('logboek/_delete_form.html.twig') }}
 {% endblock %}
