--- a/templates/logboek/edit.html.twig
+++ b/templates/logboek/edit.html.twig
@@ -9,5 +9,8 @@
 
     <a href="{{ path('logboek_index') }}">back to list</a>
 
-    {{ include('logboek/_delete_form.html.twig') }}
+
+    {% if is_granted('ROLE_ADMIN') %}
+        {{ include('logboek/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
