--- a/templates/logboek/show.html.twig
+++ b/templates/logboek/show.html.twig
@@ -59,6 +59,8 @@
         <a href="{{ path('logboek_edit', {'id': logboek.id}) }}">edit</a>
     {% endif %}
 
+    {% if is_granted('ROLE_ADMIN') %}
+        {{ include('logboek/_delete_form.html.twig') }}
+    {% endif %}
 
-    {{ include('logboek/_delete_form.html.twig') }}
 {% endblock %}
